--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -9,11 +9,11 @@
     "intro_line_1_d": "본격적인 투입 전, 다음 장의 기밀 데이터를 완벽히 숙지하도록.",
     "intro_line_prompt": "...실수는 용납하지 않네. 할 수 있겠나?",
     
-    "item_reload_desc": "다음 스테이지의 RELOAD 횟수를 1회 추가합니다.\n(최대 +20회)",
-    "item_timePlus_desc": "블록의 제한 시간을 2초 늘려줍니다.\n(최대 1레벨)",
-    "item_scan_desc": "생일 블록에 멤버 색상 힌트를 표시합니다.\n(최대 1레벨)",
-    "item_amulet_desc": "불량/친구 카드 입력 시 20% 확률로 ARTMS 카드로 변경됩니다.\n(최대 1레벨)",
-    "item_assist_desc": "Data 풀에 친구 카드가 20% 확률로 등장합니다.\n(최대 1레벨)",
+    "item_reload_desc": "리로드 횟수를 추가 구매 합니다. 최대 20개까지 충전 가능합니다.",
+    "item_timePlus_desc": "트랜젝션 속도를 개선해 2초의 블록 처리 시간을 추가 확보합니다."
+    "item_scan_desc": "소실된 데이터를 찾아 생일 블록의 색상을 복원합니다.",
+    "item_amulet_desc": "잘못된 데이터 입력 시 낮은 확률로 당신을 구원해주는 달의 여신 아뮬렛입니다.",
+    "item_assist_desc": "오류 데이터가 낮은 확률로 알아보기 쉬운 형태로 바뀝니다.",
     
     "boss_S_0": "자네, 꽤 하는군. 이 정도는 해야 내 파트너가 될 수 있지.",
     "boss_S_1": "완벽한 작업이었네. S는 아무나 받는게 아니야.",
