--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -9,11 +9,11 @@
     "intro_line_1_d": "ก่อนเริ่มปฏิบัติการจริง คุณต้องทำความเข้าใจข้อมูลลับในหน้าถัดไปให้ครบถ้วน",
     "intro_line_prompt": "...ฉันไม่ยอมรับความผิดพลาด คุณพร้อมหรือยัง?",
     
-    "item_reload_desc": "เพิ่มจำนวนการรีโหลด (RELOAD) สำหรับสเตจถัดไป 1 ครั้ง\n(สูงสุด +20 ครั้ง)",
-    "item_timePlus_desc": "เพิ่มเวลาจำกัดของบล็อกขึ้น 2 วินาที\n(สูงสุด เลเวล 1)",
-    "item_scan_desc": "แสดงคำใบ้สีของสมาชิกสำหรับบล็อกวันเกิด\n(สูงสุด เลเวล 1)",
-    "item_amulet_desc": "เมื่อใส่การ์ด Defect/Friend มีโอกาส 20% ที่จะเปลี่ยนเป็น ARTMS Card\n(สูงสุด เลเวล 1)",
-    "item_assist_desc": "มีโอกาส 20% ที่การ์ด Friend จะปรากฏใน Data pool\n(สูงสุด เลเวล 1)",
+    "item_reload_desc": "ซื้อจำนวนการรีโหลด (RELOAD) เพิ่มเติม สามารถชาร์จได้สูงสุด +20 ครั้ง",
+    "item_timePlus_desc": "ปรับปรุงความเร็วธุรกรรม (transaction) เพิ่มเวลาประมวลผลบล็อกอีก 2 วินาที",
+    "item_scan_desc": "ค้นหาข้อมูลที่ขาดหายไปและกู้คืนสีบล็อกวันเกิด",
+    "item_amulet_desc": "เมื่อใส่ข้อมูลผิดพลาด มีโอกาสน้อยที่เครื่องรางเทพธิดาแห่งดวงจันทร์จะช่วยคุณไว้",
+    "item_assist_desc": "ข้อมูลข้อผิดพลาดจะเปลี่ยนเป็นรูปแบบที่ระบุได้ง่ายขึ้นด้วยโอกาสเล็กน้อย",
     
     "boss_S_0": "คุณทำได้ดีทีเดียว ด้วยความสามารถนี้ คุณถึงจะเป็นคู่หูของฉันได้",
     "boss_S_1": "เป็นงานที่สมบูรณ์แบบ S ไม่ใช่สิ่งที่ใครจะได้รับ",
